# MP3-Player

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO.txt
Headers/: audioHandler.h  mainwindow.h  playlist.h  song.h
Sources/: audioHandler.cpp  main.cpp  mainwindow.cpp  playlist.cpp
